@@ -8,6 +8,7 @@ Copyright (C) Artyom V. Poptsov <poptsov.artyom@gmail.com>
   notice and this notice are preserved.
 
 * Unreleased
+** Deprecation
 *** In (ssh key)
     - 'get-key-type' (use 'key-type' instead)
     - 'get-public-key-hash' (use 'public-key-hash' instead)
@@ -15,6 +16,9 @@ Copyright (C) Artyom V. Poptsov <poptsov.artyom@gmail.com>
     - 'channel-get-stream (use 'channel-stream' instead)
     - 'channel-set-stream!' (use 'channel-stream-set!' instead)
     - 'channel-get-session' (use 'channel-session' instead)
+*** In (ssh message)
+    - 'message-get-type'  (use 'message-type' instead)
+    - 'message-get-session' (use 'message-session' instead)
 
 * Changes in version 0.10.2 (2016-11-25)
 ** New procedures
